--- a/index.html
+++ b/index.html
@@ -58,11 +58,35 @@ body {
 #dark-toggle {
   position: absolute; right: 20px; top: 20px; background: var(--bg); border: 1px solid #e2e8f0; border-radius: 50%; width: 38px; height: 38px; cursor: pointer; font-size: 1.3rem; color: var(--primary);
 }
+
+/* ----------- NAV TABS (ONGLETS) ----------- */
 .nav-tabs {
-  display: flex; justify-content: center; gap: 10px; background: var(--card); padding: 0.8rem; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); flex-wrap: wrap;
+  display: flex; 
+  justify-content: center; 
+  gap: 10px; 
+  background: var(--card); 
+  padding: 0.8rem; 
+  position: sticky; 
+  top: 0; 
+  z-index: 1000; 
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05); 
+  flex-wrap: wrap;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
 .tab-btn {
-  padding: 0.7rem 1.1rem; border: none; background: #e2e8f0; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 0.9rem; flex: 1 1 120px; min-width: 90px; max-width: 180px;
+  padding: 0.7rem 1.1rem; 
+  border: none; 
+  background: #e2e8f0; 
+  border-radius: 8px; 
+  cursor: pointer; 
+  font-weight: bold; 
+  font-size: 0.9rem; 
+  flex: 1 1 120px; 
+  min-width: 90px; 
+  max-width: 180px;
+  white-space: nowrap;
+  transition: background 0.2s, color 0.2s;
 }
 .tab-btn.active { background: var(--primary); color: white; }
 .container { max-width: 1100px; margin: auto; padding: 1rem; }
@@ -102,11 +126,37 @@ select, input[type="number"] { width: 70px; padding: 0.4rem; border-radius: 6px;
 #faq-content ul { margin: 0 0 1em 1.2em; }
 
 /* ----------- AMÉLIORATION RESPONSIVE MOBILE ----------- */
+@media (max-width: 900px) {
+  .nav-tabs {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    flex-wrap: nowrap;
+    gap: 5px;
+  }
+  .tab-btn {
+    min-width: 110px;
+    max-width: 200px;
+    font-size: 0.95rem;
+    flex: 0 0 auto;
+  }
+}
 @media (max-width: 700px) {
   .footer { flex-direction: column; gap: 10px; }
   .btn-generate { width: 100%; }
-  .nav-tabs { flex-wrap: wrap; gap: 5px; }
-  .tab-btn { min-width: 80px; font-size: 0.85rem; padding: 0.6rem 0.5rem; }
+  .nav-tabs { 
+    flex-wrap: nowrap; 
+    gap: 5px; 
+    overflow-x: auto; 
+    -webkit-overflow-scrolling: touch; 
+    justify-content: flex-start;
+  }
+  .tab-btn { 
+    min-width: 100px; 
+    font-size: 0.85rem; 
+    padding: 0.6rem 0.5rem; 
+    flex: 0 0 auto;
+    white-space: nowrap;
+  }
   .container { padding: 0.5rem; }
   .form-section { padding: 1rem; }
   .grid-forms { grid-template-columns: 1fr; gap: 0.5rem; }
@@ -118,8 +168,24 @@ select, input[type="number"] { width: 70px; padding: 0.4rem; border-radius: 6px;
   .header-brand { padding: 1rem; }
 }
 @media (max-width: 500px) {
-  .nav-tabs { flex-direction: column; align-items: stretch; }
-  .tab-btn { width: 100%; min-width: unset; }
+  .nav-tabs { 
+    flex-direction: row; 
+    flex-wrap: nowrap; 
+    overflow-x: auto; 
+    -webkit-overflow-scrolling: touch; 
+    align-items: stretch; 
+    gap: 3px;
+    padding: 0.5rem 0.2rem;
+  }
+  .tab-btn { 
+    width: auto; 
+    min-width: 90px; 
+    max-width: 150px; 
+    font-size: 0.8rem; 
+    padding: 0.5rem 0.3rem; 
+    flex: 0 0 auto;
+    white-space: nowrap;
+  }
   .container { padding: 0.2rem; }
   .form-section { padding: 0.7rem; }
   .footer { padding: 0.5rem; }
@@ -139,6 +205,42 @@ select, input[type="number"] { width: 70px; padding: 0.4rem; border-radius: 6px;
   #logo-preview { max-width: 30px; max-height: 20px; }
 }
 /* ----------- FIN AMÉLIORATION RESPONSIVE MOBILE ----------- */
+
+/* ----------- NAV TABS MOBILE FIXED BOTTOM ----------- */
+@media (max-width: 700px) {
+  .nav-tabs {
+    position: fixed;
+    bottom: 0;
+    top: auto;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    background: var(--card);
+    box-shadow: 0 -2px 10px rgba(0,0,0,0.07);
+    z-index: 2002;
+    padding-bottom: env(safe-area-inset-bottom, 0);
+    border-top: 1px solid #e2e8f0;
+  }
+  body {
+    padding-bottom: 260px;
+  }
+  .footer {
+    bottom: 56px;
+  }
+}
+@media (max-width: 500px) {
+  .nav-tabs {
+    padding: 0.2rem 0.1rem 0.2rem 0.1rem;
+    min-height: 48px;
+  }
+  .footer {
+    bottom: 56px;
+  }
+  body {
+    padding-bottom: 270px;
+  }
+}
+/* ----------- FIN NAV TABS MOBILE FIXED BOTTOM ----------- */
 </style>
 </head>
 <body>
