--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ select, input[type="number"] { width: 70px; padding: 0.4rem; border-radius: 6px;
 
 <div class="header-brand">
     <img id="logo-preview" src="" alt="Logo" style="display:none;">
-    <h1 class="logo-text">ZELIO</h1>
+    <h1 class="logo-text">ZELIO ELEC</h1>
     <div class="logo-subtitle">Logiciel de Chiffrage Professionnel</div>
     <button id="dark-toggle" title="Mode sombre/clair" onclick="toggleDarkMode()">🌙</button>
 </div>
@@ -1505,3 +1505,4 @@ loadSignature();
 </script>
 </body>
 </html>
+
